desktop-base (9.0.6) UNRELEASED; urgency=medium

  * Improve detection of grub efi to choose default background ratio.
  * Bump Standards-Version to 4.0.0 (no changes needed).
  * Drop versioned pre-depends on dpkg for dpkg-maintscript-helper that has
    been available in dpkg since wheezy.

 -- Aurélien COUDERC <zecoucou@free.fr>  Thu, 06 Jul 2017 17:09:44 +0200

desktop-base (9.0.5) unstable; urgency=medium

  * Ensure postinst doesn’t fails on upgrade even when an incomplete theme pack
    is active. (Closes: #858643)
  * Various check-all-the-things fixes.

 -- Aurélien COUDERC <zecoucou@free.fr>  Sun, 02 Jul 2017 10:24:37 +0200

desktop-base (9.0.4) unstable; urgency=medium

  * Fix XML errors in some GNOME wallpaper description files.
    (Closes: #862228)
  * Build with debhelper, bump compatibility level to 10, drop CDBS build
    dependency.
  * Add autopkgtests to validate XMLs structure and avoid bugs like #862228.

 -- Aurélien COUDERC <zecoucou@free.fr>  Tue, 27 Jun 2017 07:47:59 +0200

desktop-base (9.0.3) unstable; urgency=medium

  * Fix a few problems in maintainer scripts, thanks Raphaël Hertzog for the
    detailed review.
    No change in behaviour but it will make the scripts more readable and
    maintainable.
    - preinst: reorganize if conditions for package version detection in a
               readable order.
    - prerm: remove references to non existing $priority variable in loops.
    - prerm: no need to remove secondary alternatives just before removing
             a main alternative. Secondary are removed in the process anyway.
    (Closes: #853224)

 -- Aurélien COUDERC <zecoucou@free.fr>  Mon, 30 Jan 2017 22:21:40 +0100

desktop-base (9.0.2) unstable; urgency=medium

  [ Aurélien COUDERC ]
  * Include size 3840x2160 (4k) wallpaper and lockscreen. (Closes: #851930)
  * Include more sizes of emblem-debian, add emblem-debian-white.
    (Closes: #833529)
  * Lockscreen/Joy: fix wallpaper image being used instead of lockscreen.
