@@ -1,4 +1,0 @@
-# Defaults provided by desktop-base for the joy theme
-[Daemon]
-Theme=joy
-ShowDelay=0
