@@ -1,4 +1,0 @@
-# Defaults provided by desktop-base for the lines theme
-[Daemon]
-Theme=lines
-ShowDelay=0
