@@ -1,4 +1,0 @@
-# Defaults provided by desktop-base for the softwaves theme
-[Daemon]
-Theme=softwaves
-ShowDelay=0
