@@ -1,4 +1,0 @@
-# Defaults provided by desktop-base for the spacefun theme
-[Daemon]
-Theme=spacefun
-ShowDelay=0
